[package]
build = "build.rs"
edition = '2021'
name = "csv-groupby"
version = "0.20.0"
authors = ["Steve Flanagan"]
rust-version = "1.90"

description="execute a sql-like group-by on arbitrary text or csv files"

homepage="https://github.com/sflanaga/csv-groupby"
documentation="https://github.com/sflanaga/csv-groupby"
repository="https://github.com/sflanaga/csv-groupby"
license = "Unlicense OR MIT"
readme="README.md"
keywords=["report", "text", "sql", "csv", "regex"]

[profile.dev]
panic = 'abort'

[profile.release]
debug = false
#debug-assertions = false
# lto does help but not by much with pcre2
#lto = true
#codegen-units=1
#opt-level = 3
#panic = 'abort'  # does cleanup upon panics
#trustflags = ["-C", "target-cpu=native"]

[[bin]]
name = "ct"
path = "src/ct.rs"

[[bin]]
name = "gb"
path = "src/main.rs"

[[bin]]
name = "create_very_large_file"
path = "src/create_very_large_file.rs"

[[test]]
name = "general_tests"
path = "src/test.rs"

[[bin]]
name = "quick"
path = "src/quick.rs"

[[bin]]
name = "append"
path = "src/append.rs"

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }



[dependencies]
# Migrated from structopt -> clap (derive) as part of Rust 1.90 follow-up modernization
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
cpu-time = "1.0"                         # OK (small, stable)
atty = "0.2"                              # Legacy; consider swapping for is-terminal later
csv = "1"                                 # Keep major, allow latest patch
smallvec = "1.13"                        # Bump for perf / fixes
grep-cli = "0.1.9"                       # Latest minor
regex = "1.10"                           # Modern regex engine improvements
pcre2 = "0.2.3"                          # Leave pinned; newer major would be breaking
bstr = "1.9"                             # Modern bstr (API compatible)
ignore = "0.4.22"                        # Update (file walking fixes)
prettytable-rs = "0.10"                  # Newer release (formatting improvements)
chan = "0.1.23"                          # Unmaintained; leave as-is (consider removal later)
lazy_static = "1.4"                      # Latest minor
crossbeam-channel = "0.5"                # API compatible bump
crossbeam = "0.8"                        # Coord utilities newer
crossbeam-deque = "0.8"                  # Match rest of crossbeam family
tempfile = "3.10"                        # Security & perf fixes
num_cpus = "1.16"                        # Minor bump
itertools = "0.13"                       # Newer combinators
flate2 = "1.0.30"                        # Keep within 1.x, recent
zstd = "0.13"                            # Remove metadata/ warning; modern decoder
assert_cmd = "2"                         # For tests (APIs mostly same)
predicates = "3"                         # Matches assert_cmd updates
backtrace = "0.3.74"                     # Recent bugfixes
crossterm = "0.27"                       # Latest stable for terminal coloring
rayon = "1.8"                            # Parallel iterators for merge reduction
itoa = "1.0"                             # Fast integer to string formatting (zero-copy buffer)
ryu = "1.0"                              # Fast f64 to string formatting (zero-copy)
hashbrown = { version = "0.14", optional = true }
ahash = { version = "0.8", optional = true }

[features]
default = ["core-io", "stats"]
# Core functionality reading, slicing, parsing
core-io = []
# Enable memory tracking experimental code in mem.rs
memory-tracking = []
# Enable runtime statistics ticker & human readable metrics
stats = []
fast-hash = ["hashbrown", "ahash"]
# NOTE: Experimental developer helpers moved to a manual cfg flag `dev_tools` (set via RUSTFLAGS --cfg dev_tools)
# so that `--all-features` builds remain clean without pulling them in.

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
